--- a/.devcontainer/post_create.yml
+++ b/.devcontainer/post_create.yml
@@ -8,16 +8,22 @@
         gather_subset:
           - system
       become: true
+      tags: always
   roles:
     - role: lde
       when: ansible_facts.system == 'Linux'
+      tags: role_lde
     - role: font
       become: true
+      tags: role_font
       when: ansible_facts.system == "Linux"
     - role: redmine
+      tags: role_redmine
       when: ansible_facts.system == "Linux"
     - role: document
       when: ansible_facts.system == "Linux"
+      tags: role_document
     - role: vscode
       when: ansible_facts.system == "Linux"
+      tags: role_vscode
   tasks: []
